# wsjtx-improved

./: .gitattributes  .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  GetUserId.cpp  INSTALL  L10nLoader.cpp  MetaDataRegistry.cpp  Radio.cpp  RadioMetaType.cpp  SampleDownloader.cpp  commons.h  main.cpp  mycustomspinbox.cpp  mycustomspinbox.h  package_description.txt  qt_helpers.cpp  qt_helpers.hpp  revision_utils.cpp
.github/workflows/: ci-windows.yml
Audio/: BWFFile.cpp  soundin.cpp  soundin.h  soundout.cpp  soundout.h
Audio/tools/: record_time_signal.cpp
CMake/Modules/: generate_version_info.cmake
Modulator/: Modulator.cpp  Modulator.hpp
Network/: FileDownload.cpp  FoxVerifier.cpp  FoxVerifier.hpp  LotWUsers.cpp  NetworkMessage.hpp  PSKReporter.cpp  PSKReporter.hpp  eqsl.cpp  eqsl.h  wsprnet.cpp
SampleDownloader/: DirectoryDelegate.cpp  DirectoryNode.hpp
Transceiver/: DXLabSuiteCommanderTransceiver.cpp  HRDTransceiver.cpp  HRDTransceiver.hpp  HamlibTransceiver.cpp  OmniRigTransceiver.cpp  PollingTransceiver.cpp  TCITransceiver.cpp
UDPExamples/: ClientWidget.cpp  MessageAggregatorMainWindow.cpp
WSPR/: WSPRBandHopping.cpp
bundle_fixup/: CMakeLists.txt
item_delegates/: CandidateKeyFilter.cpp  MessageItemDelegate.cpp  SQLiteDateTimeDelegate.cpp
lib/: decoder.f90  ft8_decode.f90
lib/77bit/: packjt77.f90
lib/ft8/: ft8_a8d.f90
lib/ft8var/: fillhashvar.f90  ft8_decodevar.f90  ft8apsetvar.f90  ft8bvar.f90  genft8sdvar.f90  genft8var.f90  packjt77sdvar.f90
logbook/: AD1CCty.cpp  WorkedBefore.cpp
map65/: CMakeLists.txt  PSKReporter.cpp  PSKReporter.hpp  Radio.cpp  commons.h  cqdatasender.cpp  cqdatasender.h  devsetup.cpp  devsetup.h  devsetup.ui  killbyname.cpp  liveCQSender.cpp  liveCQSender.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map65.pro  messages.cpp  messages.h  plotter.cpp  widegraph.cpp  widegraph.h
map65/libm65/: CMakeLists.txt  astrosub.f90  decode0.f90  display.f90  m65.f90  m65a.f90  mapsim.f90  packjt.f90  ptt.c  q65b.f90
models/: Bands.cpp  CabrilloLog.cpp  FoxLog.cpp  FrequencyList.cpp  IARURegions.cpp  Modes.cpp  StationList.cpp
qcustomplot-source/: changelog.txt  qcustomplot.cpp
qmap/: CMakeLists.txt  astro.ui  devsetup.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapsim.f90  plotter.cpp  widegraph.ui
qmap/libqmap/: CMakeLists.txt
qmap/libqmap/EMEchart/: EMEchart.f90  EMEchart.in  go  go.bat
tests/: CMakeLists.txt
translations/: wsjtx_da.ts  wsjtx_es.ts
validators/: LiveFrequencyValidator.cpp  LiveFrequencyValidator.hpp
widgets/: CabrilloLogWindow.cpp  DateTimeEdit.hpp  QSYMessageCreator.cpp  SplashScreen.cpp  about.cpp  astro.cpp  astro.h  astro.ui  displaytext.cpp  fastplot.cpp  logqso.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotter.cpp  widegraph.cpp  widegraph.h
